[gd_scene load_steps=52 format=3 uid="uid://c4s4qhls174ct"]

[ext_resource type="Script" path="res://scripts/GaloFrito.gd" id="1_e5jvl"]
[ext_resource type="Texture2D" uid="uid://brfwjd7p1p252" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/Sprite-ChickenAttack-Sheet.png" id="2_llc33"]
[ext_resource type="Texture2D" uid="uid://c80c2eiwkyhbl" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenDie-Sheet.png" id="3_jwmvu"]
[ext_resource type="Texture2D" uid="uid://c2bljhocno2sa" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenFly-Sheet.png" id="4_gs23q"]
[ext_resource type="Texture2D" uid="uid://g6csoon5erdj" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenIdle-Sheet.png" id="5_f6hgy"]
[ext_resource type="Texture2D" uid="uid://dvbf1stu6cusd" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenJumping-Sheet.png" id="6_0m755"]
[ext_resource type="Texture2D" uid="uid://dbeeau1kk65wh" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenDamage-Sheet.png" id="7_35eyv"]
[ext_resource type="Texture2D" uid="uid://drqmkdqaxcgtc" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenWalking.png" id="8_6mwjh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l8tnb"]
atlas = ExtResource("2_llc33")
region = Rect2(0, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qras7"]
atlas = ExtResource("2_llc33")
region = Rect2(34, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps1xr"]
atlas = ExtResource("2_llc33")
region = Rect2(68, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fi8d"]
atlas = ExtResource("2_llc33")
region = Rect2(102, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv7iw"]
atlas = ExtResource("2_llc33")
region = Rect2(136, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uw4d"]
atlas = ExtResource("2_llc33")
region = Rect2(170, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8dv7"]
atlas = ExtResource("2_llc33")
region = Rect2(204, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmdyu"]
atlas = ExtResource("2_llc33")
region = Rect2(238, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hql02"]
atlas = ExtResource("2_llc33")
region = Rect2(272, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtms8"]
atlas = ExtResource("2_llc33")
region = Rect2(306, 0, 34, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_b65jo"]
atlas = ExtResource("3_jwmvu")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_40c8m"]
atlas = ExtResource("3_jwmvu")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqdrh"]
atlas = ExtResource("3_jwmvu")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_r363v"]
atlas = ExtResource("3_jwmvu")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwuok"]
atlas = ExtResource("4_gs23q")
region = Rect2(0, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7h4d"]
atlas = ExtResource("4_gs23q")
region = Rect2(32, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_abebv"]
atlas = ExtResource("4_gs23q")
region = Rect2(64, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_afjo8"]
atlas = ExtResource("4_gs23q")
region = Rect2(96, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_73dg5"]
atlas = ExtResource("4_gs23q")
region = Rect2(128, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_4urym"]
atlas = ExtResource("5_f6hgy")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt65i"]
atlas = ExtResource("5_f6hgy")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhc7f"]
atlas = ExtResource("5_f6hgy")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3cba"]
atlas = ExtResource("5_f6hgy")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_icibe"]
atlas = ExtResource("5_f6hgy")
region = Rect2(80, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_rso56"]
atlas = ExtResource("6_0m755")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fobo"]
atlas = ExtResource("6_0m755")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw21x"]
atlas = ExtResource("6_0m755")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ak6"]
atlas = ExtResource("6_0m755")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kt2m"]
atlas = ExtResource("6_0m755")
region = Rect2(80, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijqnc"]
atlas = ExtResource("6_0m755")
region = Rect2(100, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2yei"]
atlas = ExtResource("7_35eyv")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdk8h"]
atlas = ExtResource("7_35eyv")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yjrd"]
atlas = ExtResource("7_35eyv")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqdyf"]
atlas = ExtResource("7_35eyv")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpu3e"]
atlas = ExtResource("7_35eyv")
region = Rect2(80, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywuev"]
atlas = ExtResource("7_35eyv")
region = Rect2(100, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_snx3f"]
atlas = ExtResource("8_6mwjh")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_17q2a"]
atlas = ExtResource("8_6mwjh")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mtfx"]
atlas = ExtResource("8_6mwjh")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcswt"]
atlas = ExtResource("8_6mwjh")
region = Rect2(60, 0, 20, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_bssdy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8tnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qras7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps1xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fi8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv7iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uw4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8dv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmdyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hql02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtms8")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b65jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40c8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqdrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r363v")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwuok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abebv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afjo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73dg5")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4urym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt65i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhc7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3cba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icibe")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rso56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fobo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw21x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ak6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kt2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijqnc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2yei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdk8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yjrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqdyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpu3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywuev")
}],
"loop": true,
"name": &"take_damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snx3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17q2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mtfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcswt")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w62ct"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0o0mx"]
radius = 19.0263

[node name="GaloFrito" type="CharacterBody2D"]
position = Vector2(146, 100)
script = ExtResource("1_e5jvl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.7113, -1.7174)
scale = Vector2(1.47113, 1.40166)
sprite_frames = SubResource("SpriteFrames_bssdy")
animation = &"take_damage"
frame = 1
frame_progress = 0.255394

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_w62ct")

[node name="HitboxPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxPlayer"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_0o0mx")

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.4

[node name="AttackDeal" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(12, 0)
target_position = Vector2(6, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-15, 0)
target_position = Vector2(-6, 0)

[node name="RayUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -20)

[node name="RayDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 17)

[node name="Ray2" type="RayCast2D" parent="."]
target_position = Vector2(11, 11)

[node name="Ray1" type="RayCast2D" parent="."]
target_position = Vector2(-12, 11)

[node name="Ray3" type="RayCast2D" parent="."]
target_position = Vector2(14, -14)

[node name="Ray4" type="RayCast2D" parent="."]
target_position = Vector2(-13, -16)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 0

[connection signal="body_entered" from="HitboxPlayer" to="." method="_on_hitbox_player_body_entered"]
[connection signal="body_exited" from="HitboxPlayer" to="." method="_on_hitbox_player_body_exited"]
[connection signal="timeout" from="AttackCoolDown" to="." method="_on_attack_cool_down_timeout"]
[connection signal="timeout" from="AttackDeal" to="." method="_on_attack_deal_timeout"]
